force-app/main/default/objects/VVS_Value_Map__c/VVS_Value_Map__c.object-meta.xml
<CustomObject>
    <description>Part of Vista Value Selling (VVS).</description>
    <label>Value Map</label>
    <nameField>
        <displayFormat>VM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>