force-app/main/default/objects/VVS_Value_Map__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <description>Field used for Vista Value Selling</description>
    <inlineHelpText>Barriers threatening the buyer from achieving the objective</inlineHelpText>
    <label>Challenges</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>