force-app/main/default/objects/VVS_Value_Map__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Used for Vista Value Selling</description>
    <inlineHelpText>The final due date when the buyer must acieve the Success Measures</inlineHelpText>
    <label>Deadline</label>
    <type>TextArea</type>
</CustomField>