force-app/main/default/objects/VVS_Value_Map__c/fields/Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Initiatives__c</fullName>
    <description>Used for Vista Value Selling</description>
    <inlineHelpText>The projects the buyer is implementing to achieve the objective</inlineHelpText>
    <label>Initiatives</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>