force-app/main/default/objects/VVS_Value_Map__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <description>Used for Vista Value Selling</description>
    <inlineHelpText>Checkpoints along the way to the Deadline</inlineHelpText>
    <label>Milestones</label>
    <type>TextArea</type>
</CustomField>