force-app/main/default/objects/VVS_Value_Map__c/fields/Objective_Motivation__c.field-meta.xml
<CustomField>
    <fullName>Objective_Motivation__c</fullName>
    <description>Used for Vista Value Selling</description>
    <inlineHelpText>Why the buyer cares about the objective NOW? Why Now?</inlineHelpText>
    <label>Objective Motivation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>