force-app/main/default/objects/VVS_Value_Map__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <description>Used for Vista Value Selling</description>
    <inlineHelpText>What is their #1 objective, stated in their language, regardless of us?</inlineHelpText>
    <label>Objectives</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>