force-app/main/default/objects/VVS_Value_Map__c/fields/Pain_Cost_of_Inaction__c.field-meta.xml
<CustomField>
    <fullName>Pain_Cost_of_Inaction__c</fullName>
    <description>Used for Vista Value Selling</description>
    <inlineHelpText>The quantified, negative implications of the buyer&apos;s challenges</inlineHelpText>
    <label>Pain / Cost of Inaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>