force-app/main/default/objects/VVS_Value_Map__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Used for Vista Value Selling</description>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Chief Revenue / Sales Officer</fullName>
            </value>
            <value>
                <fullName>Chief Technology / Information Officer</fullName>
            </value>
            <value>
                <fullName>Compensation Leader</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Revenue Operations Leader</fullName>
            </value>
            <value>
                <fullName>Sales Leader</fullName>
            </value>
            <value>
                <fullName>Sales Operations Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>