force-app/main/default/objects/VVS_Value_Map__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make this Value Map the Primary Value Map for the Opportunity.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>