force-app/main/default/objects/VVS_Value_Map__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Value Maps</relationshipLabel>
    <relationshipName>Value_Maps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>