force-app/main/default/objects/VVS_Value_Map__c/fields/Value_Map_Name__c.field-meta.xml
<CustomField>
    <fullName>Value_Map_Name__c</fullName>
    <formula>&quot;Value Map for &quot; &amp;  Opportunity_VVS__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Map Name</label>
    <type>Text</type>
</CustomField>